# MySSH

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  i18n.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  sftp.rs  ssh.rs  storage.rs
src/components/: FileBrowser.vue  ServerForm.vue  ServerList.vue  Settings.vue  Terminal.vue
src/composables/: useApi.js
src/locales/: en-US.json  ja-JP.json  zh-CN.json
