[package]
name = "myssh"
version = "0.1.0"
description = "A simple SSH client"
authors = ["you"]
edition = "2021"

[lib]
name = "myssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"
ssh-key = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Proxy support
tokio-socks = "0.5"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
dirs = "5"
parking_lot = "0.12"
once_cell = "1"

# Encryption for secure storage
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
